--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -1,5 +1,5 @@
 section{
-    height: 120vh;
+    padding: 7rem 0 6rem 0;
    
     
 }
@@ -41,3 +41,11 @@ h1{
 .overlay i {
     font-size: 2rem;
 }
+
+
+  @media (max-width: 768px) {
+    .modle_ img {
+      width: 80% !important; 
+      transform:translateY(2rem);
+    }
+  }
