--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,3 +1,7 @@
+section{
+  padding: 7rem 0 6rem 0;
+    margin-top: 7.5rem;
+}
 .line{
     width: 5.5rem;
     height: 0.2rem;
@@ -12,10 +16,7 @@ h1{
 .modle_{
     z-index: 9999999;
 }
-section{
-    height: 100vh;
-    margin-top: 7.5rem;
-}
+
 
 
   label {
